Release Notes - Vixen 3 - Version 3.4u3

Maintenance release 3 for version 3.4

** Bug
    * [VIX-1006] - Open dmx doesn't work on Windows 8 and 10 on 64 build
    * [VIX-2238] - If the preview viewer window is minimized when it is closed, then it will restore to a very small toolbar in the upper left corner instead of it's last size.
    * [VIX-2239] - If an effect fails to render, it can cause the rest of the effect not to play in the same sample interval because it throws an unhandled exception in the core engine.
    * [VIX-2252] - Unhandled exception on startup
    * [VIX-2262] - Snow build up is not linked to the snowflake intensity curve.
    * [VIX-2263] - Meteor ground level is not linked to the Meteor intensity curve. 


** Improvement
    * [VIX-2190] - Alternating Default Colors/Icon
    * [VIX-2232] - Add the ability to sort elements under a group in the Display setup.


Release Notes - Vixen 3 - Version 3.4u2

Maintenance release 2 for version 3.4

** Bug
    * [VIX-2182] - Crash when aligning effects to nearest mark in cultures that use a comma for a decimal separator.
    * [VIX-2183] - If the user modifies Display setup and then immediately closes it and the application, corruption of the module store configuration can occur. 
    * [VIX-2184] - Previews no longer display after linking elements
    * [VIX-2188] - Make some improvements and fix a few bugs that are related to templates in the preview setup.
    * [VIX-2193] - Zooming in on timeline will eventually cause an overflow exception.
    * [VIX-2194] - The Pixel 1 enhanced size from the preview setup stays in effect on the actual preview.
    * [VIX-2195] - Preview Alignment Buttons Don't Work on Custom Templates
    * [VIX-2198] - Snow fall accumulation effect doesn't build up as expected
    * [VIX-2202] - Unhandled exception error when exiting Setup Preview
    * [VIX-2207] - Applying Meteor ground level to existing effect consistently crashes Vixen